--- a/docs/blog/闭包函数.md
+++ b/docs/blog/闭包函数.md
@@ -35,5 +35,5 @@ console.log(closure(-5)); // 输出 0
 
 闭包函数是一个匿名函数，它在内部访问了外部函数closureFunction的局部变量num。闭包函数接受一个参数x，并返回num + x的值。通过闭包，我们可以保留closureFunction的局部变量，使其在闭包函数被调用时仍然有效。
 
-示例调用展示了如何使用闭包函数。首先，我们使用closureFunction传入参数5初始化了一个闭包函数，然后通过该闭包函数分别计算了10和-5与5的和，得到了15和0的结果。
+示例调用展示了如何使用闭包函数。首先，我们使用closureFunction传入参数5初始化了一个闭包函数，然后通过该闭包函数分别计算了10和-5与5的和，得到了15和0的结果
 
